# SLUTE_generator

./: CMakeLists.txt  a.py  generateSLUT.cpp  generateSLUTE.cpp
include/: Comb.h  Edge.h  Generator.h  POST.h  POWV.h  Point.h  PreTree.h  Util.h
src/: Comb.cpp  Generator.cpp  POST.cpp  POWV.cpp  PreTree.cpp  Util.cpp
